# UglySlide

./: .$TechStack.drawio.bkp  .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  GRADIENT_FEATURE.md  IMPROVEMENTS.md  Procfile  ProjectProposal.md  README.md  RENDER_DEPLOYMENT.md  RENDER_SETUP.md  TechStack.drawio  config.py  main.py  pyproject.toml  render.yaml  requirements-prod.txt  requirements.txt  show_memory_fix.py  test_api.py  test_bytesio_method.py  test_corruption_levels.py  test_file_creation.py  test_full_flow.py  test_integration.py  test_save_issue.py  wsgi.py
.github/: copilot-instructions.md
samples/: test_sample.pptx  test_sample_TACKY.pptx
src/: __init__.py  content_transformer.py  ppt_analyzer.py  taco_generator.py
tests/: test_modules.py
web/: app.py
web/static/: script.js  style.css
web/templates/: about.html  index.html  privacy.html  terms.html
